Enhance backup logging and configure GRADLE_OPTS for Java 17/21+ support